<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Host Skatenight</string>
    <string name="action_settings">Settings</string>
    <string name="action_permission">Permission</string>
    <string name="action_add_route">Create Route</string>
    <string name="action_add_host">Add Host</string>

    <!-- Activity Hold Tabs xml -->
    <string name="title_activity_start_page">Host Skatenight</string>

    <!-- Announce Information xml -->
    <string name="title_fragment_announce_information">Create Event</string>
    <string name="announce_info_apply_button">Apply</string>
    <string name="announce_info_cancel_button">Cancel</string>
    <string name="announce_info_start_edit_button">Enter Edit Mode</string>
    <string name="announce_info_exit_edit_button">Exit Edit mode</string>
    <string name="announce_info_edit_mode_string">You can\'t do this in Edit mode</string>
    <string name="announce_info_title">Title:</string>
    <string name="announce_info_title_hint">Enter a title</string>
    <string name="announce_info_fee">Fee:</string>
    <string name="announce_info_date">Date:</string>
    <string name="announce_info_time">Time:</string>
    <string name="announce_info_set_time">Set time</string>
    <string name="announce_info_location">Location:</string>
    <string name="announce_info_location_hint">Enter a location</string>
    <string name="announce_info_map">Map:</string>
    <string name="announce_info_choose_map">Choose Route</string>
    <string name="announce_info_description">Description:</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button">Login</string>
    <string name="areyousure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="eventcreated">Event was created</string>
    <string name="not_authorized">Not authorized</string>
    <string name="field_picker_text">Text</string>
    <string name="field_picker_picture">Picture</string>
    <string name="field_picker_link">Link</string>
    <string name="field_picker_title">Choose Field</string>
    <string name="choose_image">Choose Image</string>

    <string-array name="field_picker">
        <item>Text</item>
        <item>Picture</item>
        <item>Link</item>
    </string-array>

    <!-- Manage Routes xml -->
    <string name="title_fragment_manage_routes">Manage Routes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="selections_menu_manage_routes">
        <item name="draft">Use as draft</item>
        <item name="delete">Delete</item>
    </string-array>

    <string-array name="selections_menu">
        <item name="edit">Edit</item>
        <item name="delete">Delete</item>
    </string-array>

    <string name="route_delete_failed">Route is associated with current event</string>

    <!-- Route Editor xml -->
    <string name="title_activity_route_editor">Route Editor</string>
    <string name="title_fragment_route_editor_map">Map</string>
    <string name="title_fragment_route_editor_waypoints">Waypoints</string>
    <string name="route_editor_error_load_route">Unable to load route.</string>
    <string name="route_editor_waypoint_name_format">Waypoint <xliff:g id="number">%1$d</xliff:g></string>
    <string name="route_editor_waypoint_deleted"><xliff:g id="waypoint_name">%1$s</xliff:g> deleted.</string>
    <string name="route_editor_save_dialog">Save route?</string>
    <string name="route_editor_leave_dialog">No route has been created. Do you want to leave anyway?</string>

    <!-- Strings zu activity_showinformation -->
    <string name="title_activity_show_information">Show Information</string>
    <string name="show_info_header_date">Time and date</string>
    <string name="show_info_header_location">Location</string>
    <string name="show_info_header_route">Route</string>
    <string name="show_info_header_fee">Participation fee</string>
    <string name="show_info_header_description">Description</string>
    <string name="downloading">Downloading...</string>
    <string name="show_info_empty_text">N/A</string>

    <!-- Strings zu list_view_item_layout -->
    <string name="list_view_item_layout_length">Length:</string>

    <!-- Strings zu activity_choose_route -->
    <string name="title_activity_choose_route">Wähle Route</string>

    <!-- Strings zu activity_show_route -->
    <string name="title_activity_show_route">Route</string>

    <!-- Strings zu activtiy_add_route_dialog -->
    <string name="title_activity_add_route_dialog">Add Route</string>
    <string name="title_activity_add_route_dialog_routename">Routename: </string>
    <string name="activity_add_route_dialog_cancel">Cancel</string>
    <string name="activity_add_route_dialog_apply">Apply</string>
    <string name="activity_add_route_dialog_empty">Routename can not be empty</string>

    <!-- Strings zu ShowEventsFragment -->
    <string name="title_fragment_show_events">Events</string>

    <!-- String zu EditEventActivity -->
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="eventedited">Event was edited</string>
    <string name="edit_event_info_apply_button">Save</string>
    <string name="title_activity_choose_image">ChooseImageActivity</string>
    <string name="announce_info_edit_button">Edit Event Properties</string>

    <!--Strings zu PermissionManagementActivity-->
    <string name="title_activity_permission_management">Permission Management</string>
    <string-array name="selections_menu_manage_hosts">
        <item>Delete</item>
    </string-array>

    <!--Strings zu AddHostDialog -->
    <string name="title_activity_add_host_dialog">Add Host</string>
    <string name="title_activity_add_host_dialog_hostname">Mail</string>
    <string name="activity_add_host_dialog_cancel">Cancel</string>
    <string name="activity_add_host_dialog_apply">Add</string>

    <!--Strings zu EditWaypointDialog-->
    <string name="activity_edit_waypoint_dialog_cancel">Cancel</string>
    <string name="activity_edit_waypoint_dialog_delete">Delete</string>
    <string name="activity_edit_waypoint_dialog_apply">Apply</string>
    <string name="title_activity_edit_waypoint_dialog_waypointname">Name:</string>
    <string name="title_activity_edit_waypoint_dialog">Edit Waypoint</string>
</resources>
