<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/show_info_header_date"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingLeft="0dp"
        android:textColor="#ff000000" />

    <TextView
        android:text="@string/downloading"
        android:id="@+id/show_info_date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp"
        android:textColor="#ff000000" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/show_info_header_location"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingLeft="0dp"
        android:textColor="#ff000000" />

    <TextView
        android:text="@string/downloading"
        android:id="@+id/show_info_location_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp"
        android:textColor="#ff000000" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/show_info_header_route"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingLeft="0dp"/>

    <TextView
        android:text="@string/downloading"
        android:id="@+id/show_info_route_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/show_info_header_fee"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingLeft="0dp"
        android:textColor="#ff000000" />

    <TextView
        android:text="@string/downloading"
        android:id="@+id/show_info_fee_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp"
        android:textColor="#ff000000" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/show_info_header_description"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingLeft="0dp"
        android:textColor="#ff000000" />

    <TextView
        android:text="@string/downloading"
        android:id="@+id/show_info_description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp"
        android:textColor="#ff000000" />
</LinearLayout>